# alphazero-pybind11

./: .clang-tidy  .gitignore  CLAUDE.md  LICENSE.md  README.md  m1-cross-file.txt  meson.build  meson.options  pyproject.toml  sources.sh  test_all.py
.claude/hooks/: activate-conda.sh
bench/: BENCHMARK.md  benchmark_machine.py
bench/results/: geo-gtx1060.json
builddir/: build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: eigen3.pc
builddir/meson-private/cmake_CoreFoundation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
configs/: brandubh.yaml  connect4.yaml  open_tafl.yaml  star_gambit_battle.yaml  star_gambit_clash.yaml  star_gambit_showdown.yaml  star_gambit_skirmish.yaml  star_gambit_unified.yaml  tawlbwrdd.yaml
src/: action_selector.py  brandubh_gs.cc  brandubh_gs.h  brandubh_gs_test.cc  cache_utils.py  calculate_melo.py  color.h  concurrent_queue.h  concurrent_queue_test.cc  config.py  connect4_gs.cc  connect4_gs.h  connect4_gs_test.cc  dll_export.h  dumb_eval_runner.py  frozen_eval.py  frozen_eval_backfill.py  game_runner.py  game_state.cc  game_state.h  game_ui.py  game_viz.py  history_management_test.py  load_lib.py  lr_scheduler.py  lru_cache.h  lru_cache_test.cc  mcts.cc  mcts.h  mcts_analysis.py  mcts_test.cc  meson.build  monrad.py  network_pareto.py  network_selector.py  neural_net.py  onitama_gs.cc  onitama_gs.h  onitami_gs.cc  onitami_gs.h  (+73 more)
subprojects/: eigen.wrap  google-benchmark.wrap  tracy.wrap
