[build-system]
requires = ["meson-python", "meson", "ninja", "pybind11>=2.12"]
build-backend = "mesonpy"

[project]
name = "alphazero"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "zstandard>=0.19.0",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "aim>=3.0",
]

[project.optional-dependencies]
aim = ["aim>=3.0"]
plot = ["matplotlib>=3.7"]

[dependency-groups]
build = ["meson-python>=0.16.0", "meson>=1.0.0", "ninja>=1.8.2", "pybind11>=2.12"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.uv]
default-groups = ["build", "dev"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
]
